--- a/PR242-ForegroundService/app/src/main/res/layout/fragment_main.xml
+++ b/PR242-ForegroundService/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,8 +26,18 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        android:indeterminate="true"
+        android:layout_gravity="bottom"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
+
     <TextView
-        android:id="@+id/emptyView"
+        android:id="@+id/lblEmptyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -38,10 +49,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="@dimen/activity_main_fab_margin"
-        android:layout_marginEnd="@dimen/activity_main_fab_margin"
+        android:layout_marginBottom="@dimen/main_fab_margin"
+        android:layout_marginEnd="@dimen/main_fab_margin"
         android:src="@drawable/ic_send_white_24dp"
-        app:elevation="@dimen/activity_main_fab_elevation"
-        app:pressedTranslationZ="@dimen/activity_main_fab_pressedTranslationZ"/>
+        app:elevation="@dimen/main_fab_elevation"
+        app:pressedTranslationZ="@dimen/main_fab_pressedTranslationZ"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
