PR174 - Refactor completely to simulate PR100

--- a/PR174-JobScheduler/app/src/main/res/layout/activity_main.xml
+++ b/PR174-JobScheduler/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/flContent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_main_margin"
-    tools:context="es.iessaladillo.pedrojoya.pr174.ui.main.MainActivity">
-
-    <TextView
-        android:id="@+id/lblMessage"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_main_margin"
-        android:labelFor="@+id/txtMessage"
-        android:text="@string/activity_main_lblMessage"/>
-
-    <EditText
-        android:id="@+id/txtMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblMessage"
-        android:imeOptions="actionNext"
-        android:inputType="text"
-        android:maxLines="1">
-
-        <requestFocus/>
-    </EditText>
-
-    <TextView
-        android:id="@+id/lblInterval"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtMessage"
-        android:layout_marginTop="@dimen/activity_main_margin"
-        android:labelFor="@+id/txtInterval"
-        android:text="@string/activity_main_lblInternval"/>
-
-    <EditText
-        android:id="@+id/txtInterval"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblInterval"
-        android:ems="@integer/activity_main_txtInterval_ems"
-        android:gravity="end"
-        android:imeOptions="actionNext"
-        android:inputType="number"
-        android:maxLength="7"
-        android:maxLines="1"/>
-
-    <TextView
-        android:id="@+id/lblSchedule"
-        style="@style/TextAppearance.AppCompat.Caption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtMessage"
-        android:layout_marginStart="@dimen/activity_main_margin"
-        android:layout_marginTop="@dimen/activity_main_margin"
-        android:layout_toEndOf="@+id/txtInterval"
-        android:text="@string/activity_main_lblSchedule"/>
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/swSchedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblSchedule"
-        android:layout_marginStart="@dimen/activity_main_margin"
-        android:layout_marginTop="@dimen/activity_main_margin"
-        android:layout_toEndOf="@+id/txtInterval"/>
-
-</RelativeLayout>
-
+    tools:ignore="MergeRootFrame" />
