--- a/PR059-ActionView/app/src/main/res/menu/fragment_main.xml
+++ b/PR059-ActionView/app/src/main/res/menu/fragment_main.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
     <item
         android:id="@+id/mnuSearch"
         android:title="@string/main_mnuSearch"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:icon="@drawable/ic_search_white_24dp"
+        app:iconTint="@color/white"
         app:showAsAction="always|collapseActionView"/>
 </menu>
