--- a/PR251-SQLite/app/src/main/res/layout/activity_main.xml
+++ b/PR251-SQLite/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="@dimen/main_fab_margin"
         android:layout_marginEnd="@dimen/main_fab_margin"
-        android:src="@drawable/ic_add_white_24dp"
+        android:src="@drawable/ic_add_black_24dp"
+        android:tint="@color/white"
         app:elevation="@dimen/main_fab_elevation"
         app:pressedTranslationZ="@dimen/main_fab_pressedTranslationZ"/>
 
