--- a/PR251-SQLite/app/src/main/res/layout/fragment_student.xml
+++ b/PR251-SQLite/app/src/main/res/layout/fragment_student.xml
@@ -66,7 +66,7 @@
             android:id="@+id/txtGrade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_arrow_drop_down"
+            app:drawableEndCompat="@drawable/ic_arrow_drop_down_black_24dp"
             android:hint="@string/student_imgGrade"
             app:entries="@array/grades"
             android:imeOptions="actionNext"
