--- a/PR251-SQLite/app/src/main/res/values/colors.xml
+++ b/PR251-SQLite/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="primary_dark">#512DA8</color>
     <color name="accent">#8BC34A</color>
     <color name="accent_translucent">#808BC34A</color>
+    <color name="white">#FFFFFF</color>
 </resources>
