--- a/PR089-StartedService/app/src/main/res/layout/fragment_main.xml
+++ b/PR089-StartedService/app/src/main/res/layout/fragment_main.xml
@@ -51,7 +51,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="@dimen/main_fab_margin"
         android:layout_marginEnd="@dimen/main_fab_margin"
-        android:src="@drawable/ic_send_white_24dp"
+        android:tint="@color/white"
+        android:src="@drawable/ic_send_black_24dp"
         app:elevation="@dimen/main_fab_elevation"
         app:pressedTranslationZ="@dimen/main_fab_pressedTranslationZ"/>
 
