--- a/PR016-ExpandableListView/app/src/main/res/layout/activity_main_group.xml
+++ b/PR016-ExpandableListView/app/src/main/res/layout/activity_main_group.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/activity_main_expand"
-            app:srcCompat="@drawable/ic_expand_more_white_24dp"/>
+            android:tint="@color/white"
+            app:srcCompat="@drawable/ic_expand_more_black_24dp"/>
     </LinearLayout>
 
     <LinearLayout
