--- a/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_option2.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/res/layout/fragment_option2.xml
@@ -24,6 +24,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabIconTint="@color/white"
             app:tabGravity="fill"
             app:tabMode="fixed"/>
 
@@ -43,6 +44,7 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin_right"
         app:layout_behavior="es.iessaladillo.pedrojoya.pr105.base.ScrollAwareFabBehavior"
-        app:srcCompat="@drawable/ic_done_white_24dp"/>
+        android:tint="@color/white"
+        app:srcCompat="@drawable/ic_done_black_24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
