--- a/PR169-RetrofitYandex/app/src/main/res/layout/fragment_main.xml
+++ b/PR169-RetrofitYandex/app/src/main/res/layout/fragment_main.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/activity_main_fab_margin"
-        android:src="@drawable/ic_translate_white_24dp"/>
+        android:tint="@color/white"
+        android:src="@drawable/ic_translate_black_24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
