PR191 - Use requireArguments

--- a/PR191-BottomNavigationView/app/src/main/res/layout/activity_main.xml
+++ b/PR191-BottomNavigationView/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:itemBackground="@color/colorPrimary"
+        android:background="@color/colorPrimary"
         app:itemIconTint="@drawable/nav_item_color"
         app:itemTextColor="@drawable/nav_item_color"
         app:layout_insetEdge="bottom"
