--- a/PR005-IntentsExplicitos/app/src/main/res/layout/activity_main.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/layout/activity_main.xml
@@ -3,27 +3,27 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:padding="@dimen/general_activity_vertical_margin">
+              android:padding="@dimen/main_vertical_margin">
 
     <TextView
         android:id="@+id/lblTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/activity_main_lblTitle"
+        android:text="@string/main_lblTitle"
         android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/lblData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/general_activity_vertical_margin"
-        android:text="@string/activity_main_lblData"/>
+        android:layout_marginTop="@dimen/main_vertical_margin"
+        android:text="@string/main_lblData"/>
 
     <Button
         android:id="@+id/btnRequest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/general_activity_vertical_margin"
-        android:text="@string/activity_main_btnRequest"/>
+        android:layout_marginTop="@dimen/main_vertical_margin"
+        android:text="@string/main_btnRequest"/>
 
 </LinearLayout>
