--- a/PR005-IntentsExplicitos/app/src/main/res/values/dimens.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
 
-    <dimen name="general_activity_vertical_margin">16dp</dimen>
+    <dimen name="main_vertical_margin">16dp</dimen>
 
 </resources>
