PR156 - Use requireExtra

--- a/PR156-Parcelable/app/src/main/res/layout/activity_student.xml
+++ b/PR156-Parcelable/app/src/main/res/layout/activity_student.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/activity_student_txtAge"
         android:inputType="number"
+        android:maxLength="@integer/student_txtAge_maxLenght"
         tools:ignore="Autofill"/>
 
     <Button
