--- a/PR005-IntentsExplicitos/app/src/main/res/layout/activity_student.xml
+++ b/PR005-IntentsExplicitos/app/src/main/res/layout/activity_student.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/student_txtAge"
         android:inputType="number"
-        android:digits="0123456789"
+        android:maxLength="@integer/student_txtAge_maxLenght"
         tools:ignore="Autofill"/>
 
     <Button
